--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -6,4 +6,6 @@
     <color name="text_color">#FFFFFFFF</color>
     <color name="background_color">#FF000000</color>
     <color name="orange">#FF5722</color>
+    <color name="switch_thumb">#FF5722</color>
+    <color name="switch_track">#FAAE97</color>
 </resources>
